# aoc2024

./: .gitignore
aoc/: pyproject.toml
aoc/src/2015/day3/: day3.py
aoc/src/2024/day13/: input.txt
aoc/src/2024/day16/: day16-v4p2.py  input_h.txt  input_w.txt  path.py
aoc/src/2024/day17/: day17-v4.py  input_h.txt
aoc/src/2024/day19/: day19.py
aoc/src/2024/day21/: input_h.txt
aoc/src/2024/day22/: day22-p1.py
aoc/src/2024/day24/: input_h.txt
aoc/src/2024/day25/: day25.py  input_h.txt
aoc/src/2024/day8/: input.txt
aoc/src/2024/day9/: part2c.py
aoc/src/2025/day1/: solve.py
aoc/src/2025/day10/: min_max_finder.py  minimum_finder.py  solve.py  test_min_max_finder.py  test_minimum_finder.py
aoc/src/2025/day11/: solve.py  solve_2.py
aoc/src/2025/day12/: solve.py
aoc/src/2025/day3/: solve.py
aoc/src/2025/day4/: solve.py
aoc/src/2025/day5/: solve.py
aoc/src/2025/day6/: input_2.txt  solve.py
aoc/src/2025/day7/: solve.py
aoc/src/2025/day8/: solve.py
aoc/src/2025/day9/: solve.py
day1/: day1.py  p1.py
day10/: day10.py  input.txt  input_w.txt  part1.py  part2.py
day11/: day11.py  part1.py
day12/: day12.py  example.txt  input.txt  part1.py  part2.py
day13/: day13.py
day14/: day14.py  day14p2.py  example.txt  input.txt
day15/: day15.py  day15p2.py  input.txt
day16/: day16-v2.py  day16-v3.py  day16-v4.py  day16-v4p2.py  day16.py  day16p2.py  input.txt
day17/: day17.py  day17p2.py  input.txt
day18/: day18.py  day18p2.py  input_h.txt
day19/: day19.py  p1.py  p2.py
day2/: day2.py  p1.py
day20/: day20.py  day20p2.py  day20v2.py  (+1 more)
(+48 files in other folders)
