[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [
    {name = "David Morton",email = "55235981+davidmorton0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "aoc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
